[workspace]
resolver = "2"
members = ["dji-log-parser", "dji-log-cli", "dji-log-viewer"]

[workspace.package]
authors = ["Luc Vauvillier <luc.vauvillier@gmail.com>"]
edition = "2021"
version = "0.3.2"
repository = "https://github.com/lvauvillier/dji-log-parser"
license = "MIT"
keywords = ["dji", "UAV", "parser", "drones"]
categories = [
    "aerospace::drones",
    "aerospace::protocols",
    "parser-implementations",
    "parsing",
]

[workspace.dependencies]
dji-log-parser = { path = "dji-log-parser", default-features = false }
aes = "0.8"
base64 = "0.21.5"
binrw = "0.13.1"
cbc = "0.1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive"] }
crc64 = "2.0.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.27.0"
ehttp = "0.5.0"
geojson = "0.24.1"
img-parts = "0.3.0"
kamadak-exif = "0.5.5"
kml = "0.8.5"
log = "0.4"
rfd = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
