[workspace]
resolver = "2"
members = ["dji-log-parser", "dji-log-cli"]

[workspace.package]
authors = ["Luc Vauvillier <luc.vauvillier@gmail.com>", "edan.cain@airspacelink.com"]
edition = "2021"
version = "0.4.0"
repository = "https://github.com/edancain/dji-log-parser/tree/main"
license = "MIT"
keywords = ["dji", "UAV", "parser", "drones"]
categories = [
    "aerospace::drones",
    "aerospace::protocols",
    "parser-implementations",
    "parsing",
]

[workspace.dependencies]
dji-log-parser = { path = "dji-log-parser", default-features = false }
aes = "0.8"
base64 = "0.21.5"
binrw = "0.13.1"
cbc = "0.1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive"] }
crc64 = "2.0.0"
csv = "1.0.0"
geojson = "0.24.1"
img-parts = "0.3.0"
kamadak-exif = "0.5.5"
kml = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = { version = "2.0", features = ["json"] }