[workspace]
resolver = "2"
members = ["dji-log-parser", "dji-log-cli", "dji-log-parser-js"]

[workspace.package]
authors = ["Luc Vauvillier <luc.vauvillier@gmail.com>"]
edition = "2021"
version = "0.5.4"
repository = "https://github.com/lvauvillier/dji-log-parser"
license = "MIT"
keywords = ["dji", "UAV", "parser", "drones"]
categories = [
    "aerospace::drones",
    "aerospace::protocols",
    "parser-implementations",
    "parsing",
]

[workspace.dependencies]
dji-log-parser = { path = "dji-log-parser" }
aes = "0.8"
async-channel = "2.0"
base64 = "0.21.5"
binrw = "0.13.1"
cbc = "0.1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive"] }
crc64 = "2.0.0"
csv = "1.0.0"
geojson = "0.24.1"
img-parts = "0.3.0"
js-sys = "0.3"
kamadak-exif = "0.5.5"
kml = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = { version = "2.0", features = ["json"] }
serde-wasm-bindgen = "0.4"
tsify-next = "0.5.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3"
