[package]
name = "dji-log-parser-c"
version.workspace = true
description = "C bindings for dji-log-parser rust library"
categories.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
dji-log-parser.workspace = true
js-sys.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
once_cell = "1.8.0"

[build-dependencies]
cbindgen = "0.24.0"
cc = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.0"

[profile.release]
lto = true
opt-level = "s"
