[package]
name = "dji-log-parser-js"
version.workspace = true
description = "Javascript bindings for dji-log-parser rust library"
categories.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dji-log-parser.workspace = true
js-sys.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[profile.release]
lto = true
opt-level = "s"
