[package]
name = "dji-log-parser"
categories.workspace = true
version.workspace = true
description = "Library for parsing DJI txt logs"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true
publish = true
readme = "../README.md"

[features]
native-async = ["async-channel"]

[dependencies]
aes.workspace = true
base64.workspace = true
binrw.workspace = true
cbc.workspace = true
chrono = { workspace = true, features = ["serde"] }
crc64.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-channel = { workspace = true, optional = true }
ureq = { workspace = true, features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen.workspace = true
tsify-next.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Headers",
    "Request",
    "RequestInit",
    "Response",
] }
