[package]
name = "dji-log-parser"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Library for parsing DJI txt logs"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version = "1.56"

[dependencies]
aes.workspace = true
base64.workspace = true
binrw.workspace = true
cbc.workspace = true
chrono = { workspace = true, features = ["serde"] }
crc64.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
ureq = { workspace = true, features = ["json"] }
log = "0.4"
geojson.workspace = true
once_cell = "1.8.0"
libc = "0.2"

[lib]
name = "dji_log_parser"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.24.0"
cc = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.0"