[package]
name = "dji_log_viewer"
categories.workspace = true
version.workspace = true
description = "Explore and analyze your DJI FlightsLogs"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
egui.workspace = true
eframe = { workspace = true, default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
rfd.workspace = true
log.workspace = true
# You only need serde if you want app persistence:
serde = { workspace = true, features = ["derive"] }


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
futures = "0.3.28"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
